--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -34,6 +34,9 @@
 <meta property="og:image:width" content="1974">
 <meta property="og:image:height" content="1034">
 {% if page.style %}{{ page.style }}{% endif %}
+
+<link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
+
 </head>
 
 <body class="collapsing_header">
@@ -109,6 +112,9 @@
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table.js"></script>
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/bootstrap-table-en-US.min.js"></script>
   <script type="text/javascript" src="{{ ASSET_PATH }}/js/render_jobad_list_filter.js"></script>
+
+  <script type="text/javascript" src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
 
     {% include themes/restart/page-jobad-jobdetails-handlebars.html %}
   {% endif %}
