hide "report job", customized radiobuttons, scoped styles

--- a/_includes/themes/restart/page-jobad-jobdetails-handlebars.html
+++ b/_includes/themes/restart/page-jobad-jobdetails-handlebars.html
@@ -21,7 +21,7 @@
                 <div style="padding-right: 0;" class="col-xs-8 text-right">
                     <a href="#{{{id}}}">Get shareable link <i class="fa fa-link" aria-hidden="true"></i></a>
                     &nbsp;
-                    <div class="btn-group div-report-btn">
+                    <div class="btn-group div-report-btn" style="display: none">
                         <button class="btn btn-default dropdown-toggle fa fa-flag-o" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             <span class="report-btn-font-body">Report this job...</span>
                             <span class="caret"></span>
