--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% include JB/setup %}
 
-<section class="call_to_action" style="margin-top: -24px;">
+<section class="call_to_action">
   <div class="container">
     <div class="text">
       <h3 style="color: #428bca;"><strong>an aggregator for remote jobs</strong></h3>
