--- a/_includes/themes/restart/page-jobad-modal-report-notremote.html
+++ b/_includes/themes/restart/page-jobad-modal-report-notremote.html
@@ -19,7 +19,7 @@
                         <input id="onsite" type="radio" name="notremote" value="office">
                     </div>
                     <div>
-                        <label for="onsite">
+                        <label for="onsite" tabindex="1">
                             <span>I think this is an office/onsite job </span>
                             <small>Ex: "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</small>
                         </label>
@@ -30,7 +30,7 @@
                         <input id="partially" type="radio" name="notremote" value="partially">
                     </div>
                     <div>
-                        <label for="partially">
+                        <label for="partially" tabindex="1">
                             <span>I think this job is partially remote </span>
                             <small>Ex: a requirement to "work from Head Office for a minimum of 2 days per month"</small>
                         </label>
