--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -112,7 +112,7 @@ div.homepage-f3 {
   margin: 2px;
 }
 
-.reportthisjob-modal input[type="checkbox"],
+/*.reportthisjob-modal input[type="checkbox"],
 .reportthisjob-modal input[type="radio"] {
     visibility: hidden;
 }
@@ -148,7 +148,7 @@ div.homepage-f3 {
 .reportthisjob-modal input[type=checkbox]:focus:before,
 .reportthisjob-modal input[type="radio"]:focus:before {
     box-shadow: 0 0 0 1px #428bca, 0 0 0 1px rgba(0,0,0,.9) inset;
-}
+}*/
 
 
 /* Search Filters: checkbox and radiobutton Styling */
