--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -16,10 +16,15 @@
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/userstyle.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.css" media="screen">
 
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
-<link rel="apple-touch-icon-precomposed" href="apple-touch-fa-57x57-precomposed.png">
-<link rel="shortcut icon" href="favicon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=5APBmvqpNg">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=5APBmvqpNg">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=5APBmvqpNg">
+<link rel="manifest" href="/site.webmanifest?v=5APBmvqpNg">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=5APBmvqpNg" color="#5bbad5">
+<link rel="shortcut icon" href="/favicon.ico?v=5APBmvqpNg">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+
 {% if page.style %}{{ page.style }}{% endif %}
 </head>
 
