og tags and image

--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -25,6 +25,12 @@
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
 
+<meta property="og:title" content="Remote4me: an aggregator for remote jobs in tech and non-tech">
+<meta property="og:description" content="100% remote jobs per technology stack and role; angel.co, weworkremotely.com, &quot;Ask HN: Who is hiring?&quot; + others in one place">
+<meta property="og:image:height" content="1034">
+<meta property="og:image:width" content="1974">
+<meta property="og:url" content="https://remote4me.com">
+<meta property="og:image" content="https://remote4me.com/og-wide.jpg">
 {% if page.style %}{{ page.style }}{% endif %}
 </head>
 
