--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -30,7 +30,7 @@
 <meta property="og:image:height" content="1034">
 <meta property="og:image:width" content="1974">
 <meta property="og:url" content="https://remote4me.com">
-<meta property="og:image" content="https://remote4me.com/og-wide.jpg">
+<meta property="og:image" content="https://remote4me.com/og-image.jpg">
 {% if page.style %}{{ page.style }}{% endif %}
 </head>
 
