--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -30,9 +30,9 @@
 <meta property="og:url" content="https://remote4me.com/">
 <meta property="og:site_name" content="Remote4me" />
 <meta property="og:type" content="website" />
-<meta property="og:image" content="https://remote4me.com/og-q.jpg?v=5APBmvqpNg">
-<meta property="og:image:width" content="279">
-<meta property="og:image:height" content="279">
+<meta property="og:image" content="https://remote4me.com/og-image.png?v=wide001">
+<meta property="og:image:width" content="1974">
+<meta property="og:image:height" content="1034">
 {% if page.style %}{{ page.style }}{% endif %}
 </head>
 
