WIP: "report this job" dialog, firebase auth and firabase for saving data (#5)
+"report this job", hidden; +firebase

--- a/assets/themes/restart/css/userstyle.css
+++ b/assets/themes/restart/css/userstyle.css
@@ -112,28 +112,93 @@ div.homepage-f3 {
   margin: 2px;
 }
 
+/*.reportthisjob-modal input[type="checkbox"],
+.reportthisjob-modal input[type="radio"] {
+    visibility: hidden;
+}
+
+.reportthisjob-modal input[type="checkbox"]:before,
+.reportthisjob-modal input[type="radio"]:before {
+    visibility: visible;
+    content: " ";
+    position: absolute;
+    height: 22px;
+    width: 22px;
+    display: block;
+    box-sizing: border-box;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .6) inset;
+    border: 1px solid transparent;
+    transition-property: box-shadow;
+    transition-timing-function: cubic-bezier(0,0,.2,1);
+    transition-duration: 200ms;
+    cursor: pointer;
+}
+
+.reportthisjob-modal input[type="checkbox"]:before {
+    border-radius: 4px;
+}
+.reportthisjob-modal input[type="radio"]:before {
+    border-radius: 50%;
+}
+
+.reportthisjob-modal input[type="checkbox"]:checked:before,
+.reportthisjob-modal input[type="radio"]:checked:before {
+    box-shadow: 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
+}
+.reportthisjob-modal input[type=checkbox]:focus:before,
+.reportthisjob-modal input[type="radio"]:focus:before {
+    box-shadow: 0 0 0 1px #428bca, 0 0 0 1px rgba(0,0,0,.9) inset;
+}*/
+
+.report-btn-font-body {
+    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.div-report-btn button {
+    color: #428bca;
+    border: none;
+}
+.page-jobad-modal-tell-more {
+    display: flex;
+    margin-bottom: 10px;
+}
+
+.page-jobad-modal-tell-more > div:first-child {
+    margin-right: 20px;
+}
+
+.page-jobad-modal-tell-more > div:last-child span {
+    font-size: larger;
+    display: block;
+}
+
+.page-jobad-modal-tell-more label {
+    font-weight: normal;
+    cursor: pointer;
+}
+
 /* Search Filters: checkbox and radiobutton Styling */
 
-input[type="checkbox"],
-input[type="radio"] {
+.dropdown-menu input[type="checkbox"],
+.dropdown-menu input[type="radio"] {
   pointer-events: none;
   opacity: 0;
   position: absolute;
   left: 20px;
 }
-input[type="checkbox"] + label,
-input[type="radio"] + label {
+.dropdown-menu input[type="checkbox"] + label,
+.dropdown-menu input[type="radio"] + label {
   padding-left: 28px;
   margin: 2px 0;
 }
-input[type="checkbox"] + label:before {
+.dropdown-menu input[type="checkbox"] + label:before {
   border-radius: 4px;
 }
-input[type="radio"] + label:before {
+.dropdown-menu input[type="radio"] + label:before {
   border-radius: 50%;
 }
-input[type="checkbox"] + label:before,
-input[type="radio"] + label:before {
+.dropdown-menu input[type="checkbox"] + label:before,
+.dropdown-menu input[type="radio"] + label:before {
   content: " ";
   position: absolute;
   height: 22px;
@@ -147,12 +212,12 @@ input[type="radio"] + label:before {
   transition-timing-function: cubic-bezier(0,0,.2,1);
   transition-duration: 200ms;
 }
-input[type="checkbox"]:hover + label:before,
-input[type="radio"]:hover + label:before {
+.dropdown-menu input[type="checkbox"]:hover + label:before,
+.dropdown-menu input[type="radio"]:hover + label:before {
   box-shadow: 0 0 0 1px rgba(0, 0, 0, .9) inset;
 }
-input[type="checkbox"]:checked + label:before,
-input[type="radio"]:checked + label:before {
+.dropdown-menu input[type="checkbox"]:checked + label:before,
+.dropdown-menu input[type="radio"]:checked + label:before {
   box-shadow: 0 0 0 12px #428bca inset;
 }
 
@@ -168,17 +233,17 @@ span#checkmark {
 }
 
 
-input[type=radio]:checked+label:before {
+.dropdown-menu input[type=radio]:checked+label:before {
     box-shadow: 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
 }
-input[type=checkbox]:focus:checked+label:before {
+.dropdown-menu input[type=checkbox]:focus:checked+label:before {
     box-shadow: 0 0 0 1px #428bca, 0 0 0 11px #428bca inset;
 }
-input[type=checkbox]:focus+label:before,
-input[type=radio]:focus+label:before {
+.dropdown-menu input[type=checkbox]:focus+label:before,
+.dropdown-menu input[type=radio]:focus+label:before {
     box-shadow: 0 0 0 1px #428bca, 0 0 0 1px rgba(0,0,0,.9) inset;
 }
-input[type=radio]:focus:checked+label:before {
+.dropdown-menu input[type=radio]:focus:checked+label:before {
   box-shadow: 0 0 0 1px #428bca, 0 0 0 6px #428bca inset,0 0 0 11px #fff inset;
 }
 
@@ -287,4 +352,13 @@ tr.detail-view {
 }
 td.detail-td {
     width: 56px;
+}
+
+.abuse-btn span {
+    position: relative;
+    bottom: 3px;
+}
+
+.fa-flag-o:before {
+    margin-right: 3px;
 }
