--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -16,13 +16,14 @@
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/userstyle.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.css" media="screen">
 
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=5APBmvqpNg">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=5APBmvqpNg">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=5APBmvqpNg">
-<link rel="manifest" href="/site.webmanifest?v=5APBmvqpNg">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=5APBmvqpNg" color="#5bbad5">
-<link rel="shortcut icon" href="/favicon.ico?v=5APBmvqpNg">
-<meta name="msapplication-TileColor" content="#da532c">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=v00002">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=v00002">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=v00002">
+<link rel="manifest" href="/site.webmanifest?v=v00002">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=v00002" color="#2b5797">
+<meta name="apple-mobile-web-app-title" content="Remote4me">
+<meta name="application-name" content="Remote4me">
+<meta name="msapplication-TileColor" content="#2b5797">
 <meta name="theme-color" content="#ffffff">
 
 <meta property="og:title" content="Remote4me: an aggregator for remote jobs in tech and non-tech">
