--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -16,12 +16,12 @@
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/userstyle.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.css" media="screen">
 
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=zXbvrEKjvG">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=zXbvrEKjvG">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=zXbvrEKjvG">
-<link rel="manifest" href="/site.webmanifest?v=zXbvrEKjvG">
-<link rel="mask-icon" href="/safari-pinned-tab.svg?v=zXbvrEKjvG" color="#357ebd">
-<link rel="shortcut icon" href="/favicon.ico?v=zXbvrEKjvG">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=JykA7OeR0P">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=JykA7OeR0P">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=JykA7OeR0P">
+<link rel="manifest" href="/site.webmanifest?v=JykA7OeR0P">
+<link rel="mask-icon" href="/safari-pinned-tab.svg?v=JykA7OeR0P" color="#357ebd">
+<link rel="shortcut icon" href="/favicon.ico?v=JykA7OeR0P">
 <meta name="msapplication-TileColor" content="#357ebd">
 <meta name="theme-color" content="#357ebd">
 
