--- a/_includes/themes/restart/page-jobad-jobdetails-handlebars.html
+++ b/_includes/themes/restart/page-jobad-jobdetails-handlebars.html
@@ -31,8 +31,10 @@
                                     <ul class="dropdown-menu dropdown-menu-right">
                                         <li>
                                             <a href="javascript:void(0)" data-toggle="modal"
-                                               data-target=".reportthisjob-modal" data-postid="{{{id}}}" data-tagcurrent="{{{tagCurrent}}}">I think this
-                                                job is not remote</a>
+                                               data-target=".reportthisjob-modal"
+                                               data-postid="{{{id}}}"
+                                               data-tagcurrent="{{{tagCurrent}}}"
+                                               data-title="{{{title}}}">I think this job is not remote</a>
                                         </li>
                                         <li>
                                             <a href="javascript:void(0)">I think this job belongs into different
