--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -16,3 +16,4 @@
 {{ content }}
 
 {% include themes/restart/page-jobad-modal-report-notremote.html %}
+{% include themes/restart/page-jobad-modal-report-notremote-success.html %}
