--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -2,14 +2,17 @@
 <!doctype html>
 <html class="no-js" lang="en">
 <head>
-
 <meta charset="utf-8">
-<title>{% if page.permalink == '/' %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}</title>
+<title>{% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}</title>
+{% if page.description %}
+<meta name="description" content="{{ page.description }}">
+{% else %}
 {% if thisnodes[0].description %}<meta name="description" content="{{ thisnodes[0].description }}">{% endif %}
-{% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %}
+{% endif %}
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0" />
 
+<link rel="canonical" href="{{ site.production_url }}{{ page.permalink }}" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/animate.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css" type="text/css">
@@ -25,9 +28,13 @@
 <meta name="msapplication-TileColor" content="#357ebd">
 <meta name="theme-color" content="#357ebd">
 
-<meta property="og:title" content="Remote4me: an aggregator for remote jobs in tech and non-tech">
-<meta property="og:description" content="100% remote jobs per technology stack and role; angel.co, weworkremotely.com, &quot;Ask HN: Who is hiring?&quot; + others in one place">
-<meta property="og:url" content="https://remote4me.com/">
+<meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}">
+{% if page.description %}
+<meta property="og:description" content="{{ page.description }}">
+{% else %}
+{% if thisnodes[0].description %}<meta property="og:description" content="{{ thisnodes[0].description }}">{% endif %}
+{% endif %}
+<meta property="og:url" content="{{ site.production_url }}{{ page.permalink }}">
 <meta property="og:site_name" content="Remote4me" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://remote4me.com/og-image.png?v=wide001">
