--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -45,6 +45,7 @@
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
 {% endif %}
 </head>
+<meta name="twitter:card" content="summary_large_image">
 
 <body class="collapsing_header">
 
