--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -11,14 +11,12 @@
 {% endif %}
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0" />
-
 <link rel="canonical" href="{{ site.production_url }}{{ page.permalink }}" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,600italic,700,700italic,300italic" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/animate.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/style.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/userstyle.css" type="text/css">
 <link rel="stylesheet" href="{{ ASSET_PATH }}/css/font-awesome.css" media="screen">
-
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=JykA7OeR0P">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=JykA7OeR0P">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=JykA7OeR0P">
@@ -27,7 +25,6 @@
 <link rel="shortcut icon" href="/favicon.ico?v=JykA7OeR0P">
 <meta name="msapplication-TileColor" content="#357ebd">
 <meta name="theme-color" content="#357ebd">
-
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ thisnodes[0].title }}{% endif %}">
 {% if page.description %}
 <meta property="og:description" content="{{ page.description }}">
@@ -36,19 +33,22 @@
 {% endif %}
 <meta property="og:url" content="{{ site.production_url }}{{ page.permalink }}">
 <meta property="og:site_name" content="Remote4me" />
-<meta property="og:type" content="website" />
 <meta property="og:image" content="https://remote4me.com/og-image.png?v=wide001">
 <meta property="og:image:width" content="1974">
 <meta property="og:image:height" content="1034">
+{% if page.permalink == '/' %}
+<meta property="og:type" content="website" />
+<meta name="twitter:card" content="summary_large_image">
+{% else %}
+<meta property="og:type" content="article"/>
+<meta name="twitter:card" content="summary">
+{% endif %}
 {% if page.style %}{{ page.style }}{% endif %}
 {% if thisnodes[0].datafile %}
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.css" />
 {% endif %}
 </head>
-<meta name="twitter:card" content="summary_large_image">
-
 <body class="collapsing_header">
-
   <header>
     <div class="container">
       <div class="navbar navbar-default" role="navigation">
