--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -33,15 +33,18 @@
 {% endif %}
 <meta property="og:url" content="{{ site.production_url }}{{ page.permalink }}">
 <meta property="og:site_name" content="Remote4me" />
-<meta property="og:image" content="https://remote4me.com/og-image.png?v=wide001">
-<meta property="og:image:width" content="1974">
-<meta property="og:image:height" content="1034">
 {% if page.permalink == '/' %}
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary_large_image">
+<meta property="og:image" content="https://remote4me.com/og-image.png?v=wide002">
+<meta property="og:image:width" content="1974">
+<meta property="og:image:height" content="1034">
 {% else %}
 <meta property="og:type" content="article"/>
 <meta name="twitter:card" content="summary">
+<meta property="og:image" content="https://remote4me.com/og-image-quadrat-400-400.png?v=q001">
+<meta property="og:image:width" content="400">
+<meta property="og:image:height" content="400">
 {% endif %}
 {% if page.style %}{{ page.style }}{% endif %}
 {% if thisnodes[0].datafile %}
