--- a/_includes/themes/restart/page-jobad-modal-report-notremote-success.html
+++ b/_includes/themes/restart/page-jobad-modal-report-notremote-success.html
@@ -1,3 +1,4 @@
+<!-- Модальное окно подтверждения успешной отправки репорта -->
 <div class="modal fade" id="reportthisjob-modal-success" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
