--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -3,15 +3,39 @@
 <section class="hgroup">
   <div class="container">
     <div id="alert-placeholder-id"></div>
-    <h1 class="elegant">{{ thisnodes[0].title }}</h1>
-    {% if thisnodes[0].undertagline %}
-    <h2>{{ thisnodes[0].undertagline }}</h2>
-    {% endif %}
+    <div class="row">
+      <div class="col-md-10">
+        <h1 class="elegant">{{ thisnodes[0].title }}</h1>
+        {% if thisnodes[0].undertagline %}
+        <h2>{{ thisnodes[0].undertagline }}</h2>
+        {% endif %}
+      </div>
+      <div class="col-md-2 hidden-xs">
+        <div class="btn-group btn-div" style="display: none;">
+          <button class="btn btn-primary btn-xs dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-envelope-o"></i> Get email updates <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu dropdown-menu-right">
+            <li>
+              <a href="javascript:void(0)" data-toggle="modal" data-target=".subscribe-weekly-modal">Weekly</a>
+            </li>
+            <li>
+              <a href="javascript:void(0)" data-toggle="modal" data-target=".subscribe-daily-modal">Daily</a>
+            </li>
+          </ul>
+        </div>
+        <!--
+        <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-show-count="false">Tweet</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        -->
+      </div><!--col-->
+    </div><!--row-->
 
-    <ul class="breadcrumb pull-right">
-      <li><a href="{{ HOME_PATH }}">Home</a> </li>
-      <li class="active">{{ thisnodes[0].title }}</li>
-    </ul>
+      <ul class="breadcrumb pull-right">
+        <li><a href="{{ HOME_PATH }}">Home</a> </li>
+        <li class="active">{{ thisnodes[0].title }}</li>
+      </ul>
+
+
   </div>
 </section>
 {{ content }}
