+email subscribe dialogs HTML
Former-commit-id: db57e7ead4705ded2b965b58621ea53ddc68ac40

--- a/_includes/themes/restart/page-jobad-list.html
+++ b/_includes/themes/restart/page-jobad-list.html
@@ -39,6 +39,6 @@
   </div>
 </section>
 {{ content }}
-
+{% include themes/restart/page-jobad-modal-email-subscribe.html %}
 {% include themes/restart/page-jobad-modal-report-notremote.html %}
 {% include themes/restart/page-jobad-modal-report-notremote-success.html %}
