--- a/_includes/themes/restart/page-jobad-modal-report-notremote.html
+++ b/_includes/themes/restart/page-jobad-modal-report-notremote.html
@@ -1,4 +1,4 @@
-<!-- Модальное окно отправки репорта -->
+<!-- "Report this job" dialog -->
 <div class="modal fade reportthisjob-modal" id="reportthisjob-modal" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
