load only required modules

--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -127,7 +127,9 @@
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/render_jobad_list_filter.js"></script>
 
     <script type="text/javascript" src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
-    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase-app.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase-auth.js"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase-firestore.js"></script>
 
     {% include themes/restart/page-jobad-jobdetails-handlebars.html %}
   {% endif %}
