--- a/_includes/themes/restart/default.html
+++ b/_includes/themes/restart/default.html
@@ -130,7 +130,7 @@
     <script type="text/javascript" src="/assets/lunr.js"></script>
     <script type="text/javascript" src="{{ ASSET_PATH }}/js/render_jobad_list_filter.js"></script>
     -->
-    <script type="text/javascript" src="{{ ASSET_PATH }}/js/jobad-list.js"></script>
+    <script type="text/javascript" src="{{ ASSET_PATH }}/js/jobad-list.js" async></script>
     <!--
     <script type="text/javascript" src="https://cdn.firebase.com/libs/firebaseui/2.5.1/firebaseui.js"></script>
     <script type="text/javascript" src="https://www.gstatic.com/firebasejs/5.0.2/firebase-app.js"></script>
